<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.snake.salarycounter.fragments.FinanceFormFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/finance_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pref_salary"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/pref_salary"
        android:singleLine="true"
        android:inputType="numberDecimal" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/finance_north"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pref_north"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/pref_north"
        android:singleLine="true"
        android:inputType="numberDecimal"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/finance_district"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pref_district"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/pref_district"
        android:singleLine="true"
        android:inputType="numberDecimal"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/finance_bonus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pref_bonus"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/pref_bonus"
        android:singleLine="true"
        android:inputType="numberDecimal"/>
</LinearLayout>
