<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.snake.salarycounter.fragments.ShiftType.ShiftTypeTimeFragment"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shift_type_time_day"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shift_type_time_day"
        android:layout_gravity="center_horizontal|top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shift_type_time_dinner"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shift_type_time_dinner"
        android:layout_gravity="center_horizontal|top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shift_type_time_duration"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shift_type_time_duration"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

</LinearLayout>
